--- a/sales.html
+++ b/sales.html
@@ -26,8 +26,8 @@
   
   <h3>Lima</h3>
   <ul id="lima"></ul>
-  
+
 </main>
-  <script src="./app.js"> </script>
+  <script src="js/app.js"> </script>
 </body>
 </html>
