--- a/sales.html
+++ b/sales.html
@@ -11,21 +11,13 @@
     <h1>Salmon Cookies</h1>
   </header>
   <main>
-    <h3>Seattle</h3>
-  <ul id="seattle">
-  </ul>
 
-  <h3>Tokyo</h3>
-  <ul id="tokyo"></ul>
-  
-  <h3>Dubai</h3>
-  <ul id="dubai"></ul>
-  
-  <h3>Paris</h3>
-  <ul id="paris"></ul>
-  
-  <h3>Lima</h3>
-  <ul id="lima"></ul>
+  <table id="table">
+    
+
+  </table>
+ 
+ 
 
 </main>
   <script src="js/app.js"> </script>
