--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="./reset.css">
+  <link rel="stylesheet" href="./reset.css" >
+  <link rel="stylesheet" href="./style.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,17 +17,57 @@
   </head>
   <body>
     <header>
+      <a href="sales.html">Sales HTML</a>
       <h1>Salmon Cookies</h1>
+      <img src="images/salmon.png" alt="Salmon">
     </header>
     <main>
-      <a href="sales.html">Sales HTML</a>
-      
-  
-  </main>
+      <h2>Locations</h2>
+      <h3>Seattle</h3>
+      <p>Address: 1531 PikePl, Seattle, WA 98101</p>
+      <p>Store Hours: Open Daily from 6AM-8PM  </p>
+      <p>Phone Number: 206-867-5309</p>
+      <h3>Tokyo</h3>
+      <p>Adress: Japan, 150-0042 Tokyo, Shibuya City, Udagawachoo, 21-6, Q Front,</p>
+      <p>Store Hours: Open Daily from 6AM-8PM  </p>
+      <p>Phone Number: 03-867-5309</p>
+      <h3>Dubai</h3>
+      <p>Address: 1 Sheikh Mohammed bin Rashid Blvd, Downtown Dubai, Dubai, United Arab Emirates</p>
+      <p>Store Hours: Open Daily from 6AM-8PM  </p>
+      <p>Phone Number: +974,(4), 867 5309 </p>
+      <h3>Paris</h3>
+      <p>Address: Port de Suffren, 75007 Paris, France</p>
+      <p>Store Hours: Open Daily from 6AM-8PM  </p>
+      <p>Phone Number: 00 18 67 53 09 </p>
+      <h3>Lima</h3>
+      <p>Address: Av. Alfonso Ugarte 4805, Lima 15001 , Peru</p>                    
+      <p>Store Hours: Open Daily from 6AM-8PM  </p>
+      <p>Phone Number: 011 511 8675309 </p>
+    
+    </main>
     <script src="js/app.js"> </script>
-  <section>
-    <img src="salmon.png" alt="Salmon">
-  </section>
-  
+  <nav>
+    <ul>
+    <li><img src="images/cookie cutter.jpeg" alt="Cookie Cutter"></li>
+    <li><img src="images/frosted-cookie.jpeg" alt="Frosted Cookie"></li>
+    <li><img src="images/group of fish.jpeg" alt="Group of Fish"></li>
+    <li><img src="images/shirt.jpeg" alt="Salmon Shirt"></li>
+  </ul>
+    <p>Check out the items above for purchase. From left to right we've got a cookie cutter, our world famous salmon cookies now with frosting, salmon stickers, and our newly relased Salmon Shirt.</p>
+</nav>
+  <article>
+    <h2>Our Story</h2>
+  <p>Pat grew up in the city, a part of his life he doesn't have much ties to anymore. Nowadays Pat can be found living in the most remote areas. A log cabin here, a log cabin there. His Youtube vlog about The Great Outdoors and healthy ecosystems made him a Youtube Star but not big enough to so that he felt he could give back.  Pat was always fascinated by natual phoneomen. He always talked about the circle of life and thought, "when do we ever give back to those cretures that give so much to us. Combining his love for sweets and his passion for healthy ecosystems, Pat developed a recipe for a coffee-time confection called Salmon Cookies. These cookies made into the shape of a salmon and are suitable for both humans and salmon to enjoy. Salmon Cookies is a not-for-profit company that wants to give back, not only back to the community, but our ecosystems as well. That's why for every Salmon Cookie you buy, 80% goes towards charities like he Wildlife Conservation Society. </p>
+
+  <img src="images/chinook.jpeg" alt="Chinook">
+  <p>Above you'll see a picture of the Choo-Choo the Salmon himself. The salmon that inspired Pat to start the whole company. This salmon is a special type of salmon called a Chinook salmon and Pat came accross it one day while visiting the Ballard Locks. The fish practically jumped out at him and was the one who inspired him to start the company. Choo-Cho lives a reserved life in Pat's own personal pond.</p>
+</article>
+
+<img src="images/family.jpeg" alt="Family">
+<p>We guarantee you'll love our cookies. Still not convinced that these cookies are a no brainer? </p>
+<p>Take a look at what our customers have got to say about them.</p>
+<a href="">Reviews</a>
+
+<footer></footer>  
 </body>
 </html>
