--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <script src="js/app.js"> </script>
   <nav>
     <ul>
-    <li><img src="images/cookie cutter.jpeg" alt="Cookie Cutter"></li>
+    <li><img src="images/cookie cutter.jpeg" alt="Cookie Cutter" height="200px"></li>
     <li><img src="images/frosted-cookie.jpeg" alt="Frosted Cookie"></li>
     <li><img src="images/group of fish.jpeg" alt="Group of Fish"></li>
     <li><img src="images/shirt.jpeg" alt="Salmon Shirt"></li>
