Added styling. Unsuccessful at solving js issue

--- a/sales.html
+++ b/sales.html
@@ -18,7 +18,7 @@
   
   <form id="newStore">
     <fieldset>
-  <legend>New Store</legend>
+  <legend></legend>
   <label for="city">City</label>
   <input id="city" type="text" name="city">
   
@@ -30,6 +30,7 @@
   
   <label for="avgCookiesPerCust">Average Cookies Per Customer(Number)</label>
   <input id="avgCookiesPerCust" type="text" name="avgCookiesPerCust">
+  
   
     </fieldset>
     <button type="Submit">Submit</button>
