Finished removing and adding totals row and updated styling

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     </header>
     <main>
       <h2>Locations</h2>
-      <div id="first">
+      <div>
       <h3>Seattle</h3>
       <p>Address: 1531 PikePl, Seattle, WA 98101</p>
       <p>Store Hours: Open Daily from 6AM-8PM  </p>
       <p>Phone Number: 206-867-5309</p>
     </div>
-    <div id="second">
+    <div>
       <h3>Tokyo</h3>
       <p>Adress: Japan, 150-0042 Tokyo, Shibuya City, Udagawachoo, 21-6, Q Front,</p>
       <p>Store Hours: Open Daily from 6AM-8PM  </p>
       <p>Phone Number: 03-867-5309</p>
     </div>
-    <div id="third">
+    <div>
       <h3>Dubai</h3>
       <p>Address: 1 Sheikh Mohammed bin Rashid Blvd, Downtown Dubai, Dubai, United Arab Emirates</p>
       <p>Store Hours: Open Daily from 6AM-8PM  </p>
@@ -56,18 +56,25 @@
     <p>Check out the items above available in store for purchasing. From left to right we've got a cookie cutter, our world famous salmon cookies now with frosting, salmon stickers, and our newly relased Salmon Shirt.</p>
 </nav>
   <article>
-    <h2>Our Story</h2>
-  <p>Pat grew up in the city, a part of his life he doesn't have much ties to anymore. Nowadays Pat can be found living in the most remote areas. A log cabin here, a log cabin there. His Youtube vlog about The Great Outdoors and healthy ecosystems made him a Youtube Star but not big enough to so that he felt he could give back.  Pat was always fascinated by natual phoneomen. He always talked about the circle of life and thought, "when do we ever give back to those cretures that give so much to us. Combining his love for sweets and his passion for healthy ecosystems, Pat developed a recipe for a coffee-time confection called Salmon Cookies. These cookies made into the shape of a salmon and are suitable for both humans and salmon to enjoy. Salmon Cookies is a not-for-profit company that wants to give back, not only back to the community, but our ecosystems as well. That's why for every Salmon Cookie you buy, 80% goes towards charities like the Wildlife Conservation Society. </p>
+  <span>
+  <h2>Our Story</h2>
 
+  <p>Pat grew up in the city. It's a part of his life he doesn't have much ties to anymore. Once Pat disovered nature he knew the city just wasn't for him. He spent most of his youg adult life as a fisherman in Alaska and traveled the country in the off season. Nowadays Pat can be found living in the most remote areas. A log cabin here, a log cabin there. Pat discovered youtube one day while doing an internet search at his local internet cafe and thought he could share some of his extensive knowledge about the outdoors, fishing, and natural ecosystems. His Youtube vlog about The Great Outdoors and healthy ecosystems made him a Youtube Star and saw a little bit of extra money coming in. He decided to put that extra money he was getting into a small business.  Pat was always fascinated by natural phenomenon. He always talked about the circle of life and thought, "when do we ever give back to those creatures that give so much to us. Combining his love for sweets and his passion for healthy ecosystems, Pat developed a recipe for a coffee-time confection called Salmon Cookies. These cookies made into the shape of a salmon and are suitable for both humans and salmon to enjoy. Salmon Cookies is a not-for-profit company that wants to give back, not only back to the community, but our ecosystems as well. That's why for every Salmon Cookie you buy, 80% of all profits go towards charities like the Wildlife Conservation Society. Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias quasi doloribus dolorum nemo laborum illo laboriosam distinctio voluptatibus. Commodi magni a tempora enim dolorum suscipit earum architecto nulla corrupti voluptatibus.
+  Blanditiis dicta recusandae obcaecati iusto, necessitatibus repellendus voluptates voluptatibus id et doloremque deleniti aliquid molestias dignissimos, fuga dolor fugiat illum eligendi delectus suscipit dolorem. Accusamus vitae alias aperiam ratione unde?
+  Sit quaerat ipsam, dolores voluptatem ipsa voluptatibus veniam odit ex, ad aliquid numquam, odio repudiandae praesentium earum magni impedit excepturi dolor in voluptate. Hic magnam natus incidunt culpa aperiam iure.</p>
+</span>
+<div id="first">
   <img src="images/chinook.jpeg" alt="Chinook">
   <p>Above you'll see a picture of the Choo-Choo the Salmon himself. The salmon that inspired Pat to start the whole company. This salmon is a special type of salmon called a Chinook salmon and Pat came accross it one day while visiting the Ballard Locks. The fish practically jumped out at him and was the one who inspired him to start the company. Choo-Cho lives a reserved life in Pat's own personal pond.</p>
+</div>
 </article>
 
 <img src="images/family.jpeg" alt="Family">
+<div id="second">
 <p>We guarantee you'll love our cookies. Still not convinced that these cookies are a no brainer? </p>
 <p>Take a look at what our customers have got to say about them.</p>
+</div>
 <a href="">Reviews</a>
-  
 </body>
 
 <footer></footer>  
